<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_weight="0.3"
    android:layout_height="match_parent">
    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_participants"
        android:textSize="20sp" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participantsCountText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_appearances"
        android:textSize="20sp" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appearancesCountText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_nfc_connections"
        android:textSize="20sp" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nfcConnectionsCountText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_last_sync"
        android:textSize="20sp" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastSyncText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_last_person_sync"
        android:textSize="20sp" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastParticipantSyncText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_last_person_sync_server_url"
        android:textSize="20sp" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastParticipantSyncServerUrlText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_last_sync_people_count"
        android:textSize="20sp" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastParticipantSyncPeopleCountText"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>