<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.user_info.UserInfoActivity"
    android:id="@+id/backgroundLayout"
    android:weightSum="1">


    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nfc_connection_user"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/usernameTxt"
        android:layout_gravity="center_vertical"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" />


    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nfc_connection_waiting"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" />

    <ProgressBar
        android:id="@+id/loadingBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/general_back"
        android:id="@+id/backBtn"
        android:layout_gravity="center_vertical"
        android:textSize="30sp"
        android:layout_marginRight="10dp" />


</LinearLayout>
